src/test/ui/proc-macro/issue-41211.stderr
error[E0658]: The attribute `emit_unchanged` is currently unknown to the compiler and may have meaning added to it in the future (see issue #29642)
  --> $DIR/issue-41211.rs:8:4
   |
LL | #![emit_unchanged]
   |    ^^^^^^^^^^^^^^
   |
   = help: add #![feature(custom_attribute)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
